# serviceradar

./: .bazelignore  .bazelrc  .clang-tidy  .dockerignore  .env-sample  .env.example  .gitignore  .gitleaksignore  .gitmodules  .golangci.yml  .goreleaser.yml  .ocamlformat  .pre-commit-config.yaml  .swiftlint.yml  .syft.yaml  404.html  AGENTS.md  BUILD.bazel  BUILD.md  Bazel.md  CHANGELOG  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DOCKER_QUICKSTART.md  Dockerfile-rpm.core  Dockerfile.cargo  Dockerfile.core  Dockerfile.rpm.core  Dockerfile.rpm.nats  Dockerfile.rpm.rust  Dockerfile.rpm.rust.rperf  Dockerfile.rpm.simple  Dockerfile.rpm.web  EDGE_ONBOARDING_STATUS.md  GOVERNANCE.md  INSTALL.md  ImplementationPlan.md  (+50 more)
alias/: BUILD.bazel  README.md
alias/test_tools/: BUILD.bazel
cmd/agent/: .wix.json.un~  BUILD.bazel  Package.wxs  armis_test_main.go  config.json  main.go  wix.json  wix.json~
cmd/cli/: BUILD.bazel  core.json  main.go
cmd/core/: BUILD.bazel  main.go
cmd/core/app/: BUILD.bazel  app.go  config.json
cmd/data-services/: BUILD.bazel  config.json  main.go
cmd/faker/: BUILD.bazel  Dockerfile  README.md  bgp_sim.go  bgp_sim_test.go  config.json  ip_generation_test.go  main.go  main_test.go
cmd/flowgger/: .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  README.md  build.rs  flowgger.toml
cmd/flowgger/kvutil/: Cargo.toml
cmd/flowgger/proto/: kv.proto
cmd/flowgger/src/: grpc.rs  lib.rs  main.rs
cmd/kv/: BUILD.bazel  main.go
cmd/mapper/: BUILD.bazel  config.json  main.go
cmd/netflow-collector/: CHANGELOG.md  Cargo.toml  Dockerfile  TESTING.md  build.rs  netflow-collector.json
cmd/netflow-collector/src/: config.rs  converter.rs  listener.rs  main.rs  publisher.rs  spiffe.rs
cmd/otel/: BUILD.bazel  Cargo.toml  Dockerfile  build.rs  otel.toml  otel.toml.example
cmd/otel/src/: cli.rs  config.rs  lib.rs  main.rs  metrics.rs  nats_output.rs  server.rs  setup.rs  tls.rs
cmd/otel/tests/: integration_tests.rs
cmd/poller/: BUILD.bazel  config.json  main.go
cmd/poller-ng/: BUILD.bazel  Cargo.toml  build.rs  poller-ng.json
cmd/poller-ng/src/: adapter.rs  main.rs  processor.rs
cmd/proton-tls-proxy/: BUILD.bazel  main.go
cmd/sync/: BUILD.bazel  config.json  main.go
cmd/tenant-workload-operator/: BUILD.bazel  main.go
cmd/trapd/: BUILD.bazel  Cargo.toml  Dockerfile  README.md  build.rs
cmd/trapd/kvutil/: build.rs
cmd/trapd/src/: config.rs  main.rs  spiffe.rs
ocaml/: INTEGRATION_SUMMARY.md  README.md  dune  dune-project  srql-translator.opam  test_boolean_query.ml  test_direct_proton.cmi  test_direct_proton.cmo  test_direct_proton.ml  test_schema_query.ml  test_simple_query.ml  test_srql_simple.ml
ocaml/cep/: PRD.md
ocaml/srql/: BUILD.bazel  Dockerfile  REMAINING_WORK.md  SRQL_SYNTAX.md  ocaml_local_rules.bzl
ocaml/srql/bazel/: srql_translator_alias.ml
ocaml/srql/lib/: ast.ml  dune  entity_mapping.ml  field_mapping.ml  field_mapping.mli  json_conv.ml  json_conv.mli  legacy_query.ml  lexer.mll  parser.mly  proton_client.ml  proton_client.mli  query_ast.ml  query_parser.ml  query_planner.ml  query_validator.ml  sql_ir.ml  sql_sanitize.ml  sql_sanitize.mli  translator.ml
ocaml/srql/test/: dune  run_live_srql.ml  test_bounded_unbounded.ml  test_insecure_tls.ml  test_json_conv.ml  test_parser_debug.ml  test_proton_integration.ml  test_query_engine.ml  test_serviceradar_srql.ml  test_simple_connection.ml  test_sql_sanitize.ml  test_srql_connection.ml  test_srql_translation.ml  test_successful_tls.ml  test_tls_connection.ml  test_translator.ml
proto/: BUILD.bazel  agent.proto  camera_media.pb.go  camera_media.proto  camera_media_grpc.pb.go  core_service.pb.go  core_service.proto  core_service_grpc.pb.go  data_service.pb.go  data_service.proto  data_service_grpc.pb.go  discovery.pb.go  discovery_grpc.pb.go  kv.pb.go  kv.proto  kv_grpc.pb.go  mock_agent_service.go  mock_monitoring.go  monitoring.pb.go  monitoring.proto  monitoring_grpc.pb.go  nats_account.pb.go  nats_account.proto  nats_account_grpc.pb.go
proto/discovery/: BUILD.bazel  discovery.pb.go  discovery.proto  discovery_grpc.pb.go
proto/flow/: BUILD.bazel  flow.pb.go  flow.proto
proto/identitymap/: BUILD.bazel
proto/identitymap/v1/: BUILD.bazel  identity_map.pb.go  identity_map.proto
proto/mdns/: mdns.pb.go  mdns.proto
proto/rperf/: BUILD.bazel  rperf.pb.go  rperf.proto  rperf_grpc.pb.go
release/: BUILD.bazel  publish_packages.go
web/: .npmrc  BUILD.bazel  build-and-run.sh  next.cli.js  next.config.bazel.mjs  next.config.docker.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web-ng/: .dev-hosts.inetrc  AGENTS.md  BUILD.bazel  README.md  check_data.exs  dev-cluster.sh  dev-hosts.inetrc  mix.exs  notes01.md  setup-dev-hosts.sh  ssl_dist.dev.conf
web-ng/assets/: package-lock.json  package.json
web-ng/assets/component/: index.js
web-ng/assets/css/: app.css
web-ng/assets/js/: app.js
web-ng/config/: config.exs  dev.exs  runtime.exs  test.exs
web-ng/lib/: serviceradar_web_ng_web.ex
web-ng/lib/serviceradar/: edge.ex  identity.ex  infrastructure.ex  inventory.ex  monitoring.ex  policies.ex
web-ng/lib/serviceradar_web_ng/: accounts.ex  admin_api.ex  application.ex  ash_scope.ex  ash_tenant.ex  datasvc.ex  edge.ex  feature_flags.ex  graph.ex  infrastructure.ex  inventory.ex  jobs.ex  rbac.ex  repo.ex  srql.ex
web-ng/lib/serviceradar_web_ng_web/: ash_json_api_router.ex  client_ip.ex  endpoint.ex  gateway_helpers.ex  gettext.ex  oban_resolver.ex  router.ex  stats.ex  telemetry.ex  tenant_resolver.ex  user_auth.ex
web-ng/native/god_view_nif/: Cargo.toml
web-ng/native/srql_nif/: Cargo.toml
web-ng/priv/repo/: seeds.exs
web-ng/rel/: env.sh.eex  ssl_dist.conf.example  vm.args.eex
web-ng/scripts/: bazel_precommit.sh
web-ng/serviceradar/lib/: serviceradar.ex
web-ng/serviceradar/test/: serviceradar_test.exs
web-ng/test/: test_helper.exs
web-ng/test/integration/: graph_cypher_integration_test.exs  (+1 more)
web/public/: build-info.json
web/src/: env.js  middleware.ts  proxy.ts  types.ts
web/src/lib/: api.ts  (+16 more)
(+8431 files in other folders)
