load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# gazelle:prefix github.com/carverauto/serviceradar
# gazelle:exclude .gomodcache
# gazelle:exclude _build
# gazelle:exclude dist
# gazelle:exclude release-artifacts
# gazelle:exclude target
# gazelle:exclude cmd/checkers/rperf-client
# gazelle:exclude cmd/ebpf

load("@platforms//host:extension.bzl", "host_platform")

gazelle(
    name = "gazelle",
)

exports_files(["VERSION"])

# Setup for Apko chainguard images
# Run only once as setup: bazel run @@//:apko_bazelrc && chmod +x .apko/range.sh
# Thereafter, the config is in .apko/.bazelrc
# When the .apko folder already exists, the setup is already completed.
load("@rules_apko//apko:defs.bzl", "apko_bazelrc")

apko_bazelrc()

# Custom RBE platform using Oracle Linux 9 based executor image
platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "dockerNetwork": "off",
        "container-image": "docker://ghcr.io/carverauto/serviceradar/rbe-executor:v1.0.9",
    },
    visibility = ["//visibility:public"],
)

alias(
    name = "cwalk",
    actual = "@@cwalk+//:cwalk",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "buildbuddy_setup_docker_auth",
    srcs = ["buildbuddy_setup_docker_auth.sh"],
    visibility = ["//visibility:public"],
)
