load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# gazelle:prefix github.com/carverauto/serviceradar
# gazelle:exclude .gomodcache
# gazelle:exclude _build
# gazelle:exclude dist
# gazelle:exclude release-artifacts
# gazelle:exclude target
# gazelle:exclude rust/rperf-client
# gazelle:exclude cmd/ebpf

load("@platforms//host:extension.bzl", "host_platform")

gazelle(
    name = "gazelle",
)

exports_files([
    "VERSION",
    "Cargo.toml",
    "Cargo.lock",
    ".tool-versions",
])

# Custom RBE platform using Oracle Linux 9 based executor image
platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "dockerNetwork": "host",
        "container-image": "docker://ghcr.io/carverauto/serviceradar/rbe-executor:v1.0.23",
    },
    visibility = ["//visibility:public"],
)

alias(
    name = "cwalk",
    actual = "//third_party/cwalk:cwalk",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "swiftlint_lint",
    srcs = ["scripts/swiftlint_bazel.sh"],
    args = [
        "$(location .swiftlint.yml)",
    ],
    data = [
        ".swiftlint.yml",
    ],
    visibility = ["//visibility:public"],
)
