[workspace]
resolver = "2"
members = [
    "rust/kvutil",
    "cmd/flowgger",
    "cmd/trapd",
    "cmd/otel",
    "cmd/poller-ng",
]

[workspace.dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tonic-build = "0.12"
tokio = { version = "1" }
tokio-stream = "0.1"
tonic-health = "0.12"
tonic-reflection = "0.12"
