[workspace]
resolver = "2"
members = [
    "rust/kvutil",
    "rust/config-bootstrap",
    "cmd/flowgger",
    "cmd/trapd",
    "cmd/otel",
    "cmd/poller-ng",
    "cmd/consumers/zen",
    "cmd/checkers/rperf-client",
    "cmd/checkers/sysmon",
]

[workspace.dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tonic-build = "0.12"
tokio = { version = "1" }
tokio-stream = "0.1"
tonic-health = "0.12"
tonic-reflection = "0.12"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
